Small update to readme.

--- a/p2/readme.html
+++ b/p2/readme.html
@@ -206,7 +206,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <p>As always,</p>
 <ul>
 <li>Code that does not compile will receive a 0.</li>
-<li>Files that are not properly named will receive a 0. (See the section below on “what to submit.”)</li>
+<li>Please follow the <a href="#submission-procedure">submission instructions</a> carefully!</li>
 </ul>
 <h2 id="details">Details</h2>
 <p>This time around, your program will not be so chatty. The program will just wait for you to type an integer, and then print a 0 or 1 to indicate whether or not that integer was prime. Here’s some sample output of an interactive session (assuming <code>primetest</code> is the name of the executable<a href="#fn1" class="footnote-ref" id="fnref1" role="doc-noteref"><sup>1</sup></a>):</p>
