Minor update to readme.

--- a/p4/readme.html
+++ b/p4/readme.html
@@ -212,7 +212,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <li>Follow the instructions on <a href="http://www-cs.ccny.cuny.edu/~wes/CSC103/scm.html#collaborate">collaborating with git</a>. (Team leaders: don’t forget to give other members write access to the repository.)</li>
 <li>Use <a href="https://www.atlassian.com/git/tutorials/making-a-pull-request/example">bitbucket’s fork + pull request</a> features.</li>
 </ol>
-<strong>NOTE:</strong> Either way you do it, you should follow the guidelines given above about <a href="http://www-cs.ccny.cuny.edu/~wes/CSC103/scm.html#collaborate">avoiding merge conflicts</a>.</li>
+<strong>NOTE:</strong> Either way you do it, you should follow the guidelines given above about <a href="http://www-cs.ccny.cuny.edu/~wes/CSC103/scm.html#collaborate">avoiding merge conflicts</a>. You should also make sure your <a href="https://www-cs.ccny.cuny.edu/~wes/CSC103/scm.html#some-minor-points"><code>.gitconfig</code> has your name / cool hacker alias in it</a>.</li>
 <li>Your projects will be graded based on whether or not they pass the automated tests, and whether or not each team member is contributing (as evidenced by the commit logs).</li>
 </ul>
 <!---}}-->
